# Arevalo_Dalton_Extras

./: README.md
Arevalo_Dalton_Conjunta_1/: CMakeLists.txt  lista_simple.h  main.cpp  nodo.h
Arevalo_Dalton_Examen_2/: CMakeLists.txt  main.cpp
Extras/Extra_10_ing_Inversa/: Diagrama de clases matrices.mdj
Extras/Extra_11_Memoria_Dinamica/: Extra_11.dev  Extra_11.layout  Makefile.win  matriz.cpp  matriz.h  operaciones.cpp  operaciones.h
Extras/Extra_13_Recursividad_Factorial/: Extra_13.dev  Makefile.win  main.cpp
Extras/Extra_14_Torres_Recursividad/: Extra_14.dev
Extras/Extra_15_Triangulo_Pascal/: CMakeLists.txt
Extras/Extra_16_ListasSimples/: Extra_16.dev  Extra_16.layout  Makefile.win
Extras/Extra_17_Listas/: Extra_17.dev  Extra_17.layout  Makefile.win  lista.h  main.cpp  nodo.h
Extras/Extra_19_Listas_Dobles_Completo/: CMakeLists.txt  main.cpp
Extras/Extra_1_Declaracion_Punteros/: CMakeLists.txt  aplicacion.cpp  aplicacion.h  main.cpp  puntero.h
Extras/Extra_20_Listas_Simples_completa/: CMakeLists.txt  lista.cpp  lista.h  main.cpp  nodo.cpp  nodo.h
Extras/Extra_21_Prueba_Cualquier_Programa/: CMakeLists.txt  lista_simple.h  main.cpp
Extras/Extra_22_Funciones_Lambda/: main.cpp
Extras/Extra_24_ListasDobles/: CMakeLists.txt  date.cpp  date.h  dcList.h  main.cpp  node.h  person.h  personOperation.h
Extras/Extra_2_Declaracion_Arreglos/: arreglo.cpp  arreglo.h
Extras/Extra_3_App_Punteros/: Extra_3.dev  Extra_3.layout  Makefile.win  aplicacion.cpp  aplicacion.h  main.cpp  puntero.cpp
Extras/Extra_4_Suma_Arreglos/: Extra_4.dev  Extra_4.layout  (+6 more)
(+47 files in other folders)
